--- a/youtube.html
+++ b/youtube.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <img src="imagens/tela-youtube.png" alt="Youtube">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/playlists" target="_blank">Acesse</a>
+    <a href="https://www.youtube.com/watch?v=QwyddljZ650&t=1s" target="_blank">Acesse</a>
     
 </body>
 </html>
